Restore GraalVM 21 native build support